--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,14 @@
 			<version>3.4.1</version>
 		</dependency>
 
+		<!-- Apache cammel HTTP -->
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-http</artifactId>
+			<version>3.4.2</version>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
